fixed broken button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<ul class="actions">
 				<li><a href="#projects" class="button scrolly">Projects</a></li>
 				<li><a href="#experience" class="button scrolly">Experience</a></li>
-				<li><a href="#certs" class="button scrolly">Education & Certs</a></li>
+				<li><a href="#education" class="button scrolly">Education & Certs</a></li>
 				<li><a href="#contact" class="button scrolly">Contact</a></li>
 			</ul>
 		</div>
@@ -443,67 +443,6 @@
 								one acting as a server, and another acting as a smart wall plug to turn a light on and off. </p>
 							</div> -->
 
-	<!-- Four - Education, Certs, Skills -->
-	<section id="three" class="wrapper">
-		<div class="inner">
-			<!-- Education -->
-			<header class="major">
-				<h2>Education</h2>
-			</header>
-			<header>
-				<ul>
-					<li>
-						<h4>Bachelor of Science - Business Information Systems</h4>
-						<p>Oregon State University, Corvallis, Oregon - June 2024</p>
-					</li>
-				</ul>
-			</header>
-
-			<!-- Certifictaions -->
-			<header class="major">
-				<h3>Certifications</h3>
-			</header>
-			<header>
-				<ul>
-					<!--<li>
-						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-801/" target="_blank">Configuring Windows Server Hybrid Advanced Services
-								(AZ-801)</a></h4>
-						<p>Expected 2025, Microsoft Corporation</p>
-					</li>-->
-					<li>
-						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
-								target="_blank">Administering Windows Server Hybrid Core Infrastructure
-								(AZ-800)</a></h4>
-						<p>Expected September 2025, Microsoft Corporation</p>
-					</li>
-					<li>
-						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification"
-								target="_blank">Microsoft Certified: Azure Fundamentals
-								(AZ-900)</a></h4>
-						<p>May 2025, Microsoft Corporation</p>
-					</li>
-					<li>
-						<h4><a href="https://www.cisco.com/site/us/en/learn/training-certifications/certifications/enterprise/ccna/index.html"
-								target="_blank">Cisco Certified Network Associate
-								(CCNA)</a></h4>
-						<p>March 2025, Cisco Systems, Inc.</p>
-					</li>
-					<li>
-						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert
-								(CPCNE)</a></h4>
-						<p>October 2024, Cradlepoint by Ericsson</p>
-					</li>
-					<li>
-						<h4><a href="https://www.getdante.com/resources/training/dante-certification-program/"
-								target="_blank">Dante by Audinate Certification - Level 3</a></h4>
-						<p>Audinate - May 2023</p>
-					</li>
-				</ul>
-
-			</header>
-		</div>
-	</section>
-
 	<!-- Skills -->
 	<section id="skills" class="wrapper">
 		<div class="inner">
@@ -625,6 +564,55 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<!-- Certs -->
+	<section id="certs" class="wrapper">
+		<div class="inner">
+
+			<!-- Certifictaions -->
+			<header class="major">
+				<h3>Certifications</h3>
+			</header>
+			<header>
+				<ul>
+					<!--<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-801/" target="_blank">Configuring Windows Server Hybrid Advanced Services
+								(AZ-801)</a></h4>
+						<p>Expected 2025, Microsoft Corporation</p>
+					</li>-->
+					<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
+								target="_blank">Administering Windows Server Hybrid Core Infrastructure
+								(AZ-800)</a></h4>
+						<p>Expected September 2025, Microsoft Corporation</p>
+					</li>
+					<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification"
+								target="_blank">Microsoft Certified: Azure Fundamentals
+								(AZ-900)</a></h4>
+						<p>May 2025, Microsoft Corporation</p>
+					</li>
+					<li>
+						<h4><a href="https://www.cisco.com/site/us/en/learn/training-certifications/certifications/enterprise/ccna/index.html"
+								target="_blank">Cisco Certified Network Associate
+								(CCNA)</a></h4>
+						<p>March 2025, Cisco Systems, Inc.</p>
+					</li>
+					<li>
+						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert
+								(CPCNE)</a></h4>
+						<p>October 2024, Cradlepoint by Ericsson</p>
+					</li>
+					<li>
+						<h4><a href="https://www.getdante.com/resources/training/dante-certification-program/"
+								target="_blank">Dante by Audinate Certification - Level 3</a></h4>
+						<p>Audinate - May 2023</p>
+					</li>
+				</ul>
+
+			</header>
 		</div>
 	</section>
 
