--- a/index.html
+++ b/index.html
@@ -589,6 +589,11 @@
 						<p>Expected September 2025, Microsoft Corporation</p>
 					</li>
 					<li>
+						<h4><a href="https://www.isc2.org/certifications/cc"
+								target="_blank">Certified in Cybersecurity (CC)</a></h4>
+						<p>July 2025, ISC²</p>
+					</li>
+					<li>
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification"
 								target="_blank">Microsoft Certified: Azure Fundamentals
 								(AZ-900)</a></h4>
