--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 				<ul>
 					<li>Design, install, and maintain campus-wide computer networks</li>
 					<li>Provided technical on-call support to staff and volunteers</li>
-					<li>Designed, built, and oversaw a live producton environment including<br>audio mixing, video
+					<li>Designed, built, and oversaw a live production environment including<br>audio mixing, video
 						production and live stream components.</li>
 				</ul>
 			</div>
@@ -445,7 +445,7 @@
 			<div class="col-6 col-12-medium">
 				<ul>
 					<li>Trained and supervised the sound team</li>
-					<li>Oversaw regular weekend services and other performace events</li>
+					<li>Oversaw regular weekend services and other performance events</li>
 					<li>Maintained and provided support for sound equipment</li>
 				</ul>
 			</div>
@@ -490,18 +490,21 @@
 				<!-- Networking -->
 				<h4><i class="fa fa-sitemap" aria-hidden="true" style="margin-right:.4rem;"></i>Networking</h4>
 				<div style="display:flex; flex-wrap:wrap; gap:.5rem; margin:.5rem 0 1.25rem;">
-					<span class="button small">IPv4/IPv6</span>
-					<span class="button small">OpenVPN</span>
-					<span class="button small">IPsec</span>
-					<span class="button small">WireGuard</span>
+					<span class="button small">Cisco</span>
+					<span class="button small">Cradlepoint</span>
+					<span class="button small">UniFi</span>
 					<span class="button small">Tailscale/Headscale</span>
-					<span class="button small">Routing &amp; Switching</span>
+					<span class="button small">WireGuard</span>
+					<span class="button small">OpenVPN</span>
+					<!-- Optional -->
+					<!--<span class="button small">Starlink</span>-->
 				</div>
 
 				<!-- Identity & Access -->
-				<h4><i class="fa fa-lock" aria-hidden="true" style="margin-right:.4rem;"></i>Identity &amp; Access</h4>
+				<h4><i class="fa fa-lock" aria-hidden="true" style="margin-right:.4rem;"></i>Identity &amp; Access (IAM)</h4>
 				<div style="display:flex; flex-wrap:wrap; gap:.5rem; margin:.5rem 0 1.25rem;">
 					<span class="button small">Active Directory</span>
+					<span class="button small">Authentik</span>
 					<span class="button small">GPO</span>
 					<span class="button small">SSO</span>
 					<span class="button small">OIDC</span>
@@ -513,12 +516,11 @@
 					<span class="button small">Azure VMs</span>
 					<span class="button small">VNets</span>
 					<span class="button small">NSGs</span>
-					<span class="button small">Nextcloud</span>
 				</div>
 
 				<!-- Operating Systems -->
-				<h4><i class="fa fa-linux" aria-hidden="true" style="margin-right:.4rem;"></i>Linux &amp; Operating
-					Systems</h4>
+				<h4><i class="fa fa-linux" aria-hidden="true" style="margin-right:.4rem;"></i>Operating
+					Systems &amp; Platforms</h4>
 				<div style="display:flex; flex-wrap:wrap; gap:.5rem; margin:.5rem 0 1.25rem;">
 					<span class="button small">Windows</span>
 					<span class="button small">MacOS</span>
@@ -544,17 +546,19 @@
 					<span class="button small">ZFS</span>
 					<span class="button small">SMB</span>
 					<span class="button small">NFS</span>
-					<span class="button small">MongoDB</span>
 					<span class="button small">Snapshot & Replication</span>
+					<span class="button small">MongoDB</span>
+					<span class="button small">Nextcloud</span>
 				</div>
 
 				<!-- Programming & Tools -->
-				<h4><i class="fa fa-code" aria-hidden="true" style="margin-right:.4rem;"></i>Programming &amp; Tools
+				<h4><i class="fa fa-code" aria-hidden="true" style="margin-right:.4rem;"></i>Programming &amp; Development Tools
 				</h4>
 				<div style="display:flex; flex-wrap:wrap; gap:.5rem; margin:.5rem 0 0;">
 					<span class="button small">Python</span>
 					<span class="button small">C/C++</span>
-					<span class="button small">HTML/JS</span>
+					<span class="button small">HTML/JavaScript</span>
+					<span class="button small">Bash</span>
 					<span class="button small">Git/GitHub</span>
 				</div>
 			</div>
