--- a/index.html
+++ b/index.html
@@ -494,7 +494,13 @@
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
 								target="_blank">Administering Windows Server Hybrid Core Infrastructure
 								(AZ-800)</a></h4>
-						<p>Expected September 2025, Microsoft Corporation</p>
+						<p>Expected December 2025, Microsoft Corporation</p>
+					</li>
+					<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/microsoft-365-fundamentals/?practice-assessment-type=certification"
+								target="_blank">Microsoft 365 Certified: Fundamentals
+								(MS-900)</a></h4>
+						<p>October 2025, Microsoft Corporation</p>
 					</li>
 					<li>
 						<h4><a href="https://www.isc2.org/certifications/cc" target="_blank">Certified in Cybersecurity
