Updated site and resume

--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
 				<h4><i class="fa fa-cloud icon-heading" aria-hidden="true"></i>Cloud</h4>
 				<div class="skill-tag-list">
 					<span class="button small">Azure VMs</span>
+					<span class="button small">Microsoft 365</span>
 					<span class="button small">VNets</span>
 					<span class="button small">NSGs</span>
 				</div>
