Added Terraform Cert

--- a/index.html
+++ b/index.html
@@ -491,11 +491,16 @@
 								(AZ-801)</a></h4>
 						<p>Expected 2025, Microsoft Corporation</p>
 					</li>-->
-					<li>
+					<!--<li>
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
 								target="_blank">Administering Windows Server Hybrid Core Infrastructure
 								(AZ-800)</a></h4>
 						<p>Expected December 2025, Microsoft Corporation</p>
+					</li>-->
+					<li>
+						<h4><a href="https://developer.hashicorp.com/certifications/infrastructure-automation"
+								target="_blank">Terraform Associate</a></h4>
+						<p>December 2025, HashiCorp</p>
 					</li>
 					<li>
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/microsoft-365-fundamentals/?practice-assessment-type=certification"
@@ -554,7 +559,7 @@
 				These days, in addition to building computers, I enjoy tinkering with my home lab setup, constantly
 				learning
 				and expanding my knowledge. For me, technology is more than just a profession—it's a lifelong pursuit of
-				discovery, creativity, aFnd innovation.
+				discovery, creativity, and innovation.
 				</br></br></br></br>
 
 				<span class="image right"><img src="images/pic01.jpg" alt="" /></span>
