--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 					<span class="button small">Docker</span>
 					<span class="button small">Compose</span>
 					<span class="button small">Kubernetes</span>
-					<!--<span class="button small">Helm</span>-->
+					<span class="button small">Helm</span>
 				</div>
 
 				<!-- Storage & Services -->
@@ -431,6 +431,7 @@
 					<span class="button small">HTML/JavaScript</span>
 					<span class="button small">Bash</span>
 					<span class="button small">Git/GitHub</span>
+					<span class="button small">Terraform</span>
 				</div>
 			</div>
 		</div>
@@ -480,7 +481,7 @@
 	<section id="certs" class="wrapper">
 		<div class="inner">
 
-			<!-- Certifictaions -->
+			<!-- Certifications -->
 			<header class="major">
 				<h3>Certifications</h3>
 			</header>
